--- a/.github/workflows/ccu.yml
+++ b/.github/workflows/ccu.yml
@@ -30,13 +30,9 @@ jobs:
         
       - name: Install Platformio
         run: pip install -U platformio
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+        
+      - name: Install teensy platform
+        run: pio platform install teensy
+        
+      - name: Build CCU project
+        run: pio run -d ./CEN/CCU/
