persistent setting api

--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,4 @@ UIU/cen_uiu/assets/logo192.png
 UIU/cen_uiu/assets/logo512.png
 UIU/cen_uiu/assets/robots.txt
 UIU/cen_uiu/assets/manifest.json
+UIU/cen_uiu/config/main.json
