--- a/UIU/frontend/package.json
+++ b/UIU/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-colorful": "^5.5.0",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "react-swipeable-views": "^0.14.0",
